# nataili

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
src/nataili/: __init__.py
src/nataili/blip/: caption.py
src/nataili/model_manager/: __init__.py  blip.py  modelmanager.py
src/nataili/modules/: blip.py  vit.py
src/nataili/util/: __init__.py  performance.py
test/: test_blip.py
