[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nataili"
version = "0.0.1"
authors = [
    { name="hlky", email="goto@github.com" },
]
description = ""
readme = "README.md"
license = { file="LICENSE" }
dynamic = ["dependencies"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Sygil-Dev/nataili"
"Bug Tracker" = "https://github.com/Sygil-Dev/nataili/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}